--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,8 +23,8 @@
 
         <ImageView
             android:id="@+id/iV"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:srcCompat="@drawable/ic" />
@@ -35,6 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="jessica smith"
+            android:textColor="@color/black"
             android:textStyle="bold" />
 
         <TextView
@@ -43,20 +44,44 @@
             android:layout_height="wrap_content"
             android:text="Oran,Algeria" />
 
-        <Button
-            android:id="@+id/button"
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            android:background="@drawable/button_purple_rounded"
-            android:text="4.3 *"
-            android:textSize="20sp" />
+        <LinearLayout
+            android:id="@+id/reviews"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/add_to_card_bg"
+            android:orientation="horizontal"
+            android:padding="3dp">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_keyboard_arrow_left_black_24dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="4.3"
+                android:textColor="@color/black"
+                android:textSize="12sp" />
+
+            <ImageView
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:layout_marginStart="4dp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_star_black_24dp" />
+
+        </LinearLayout>
+
 
 
     </LinearLayout>
 
-    <androidx.recyclerview.widget.RecyclerView yout_width="wrap_content"
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_height="wrap_content"
-        android:layout_width= "wrap_content"
+        android:layout_width= "match_parent"
         android:id="@+id/recyclerview"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
