--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,6 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorRate">#F8FF3B</color>
-    <color name="colorAccent">#03F4BC</color>
+    <color name="colorAccent">#66D1C8</color>
+    <color name="black">#000</color>
 </resources>
