--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,8 +23,8 @@
 
         <ImageView
             android:id="@+id/iV"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:srcCompat="@drawable/ic" />
@@ -34,7 +34,7 @@
             android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="jessica smith"
+            android:text="Jessica Smith"
             android:textColor="@color/black"
             android:textStyle="bold" />
 
@@ -42,6 +42,7 @@
             android:id="@+id/tv_country"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="10sp"
             android:text="Oran,Algeria" />
 
         <LinearLayout
@@ -71,7 +72,8 @@
                 android:layout_height="15dp"
                 android:layout_marginStart="4dp"
                 android:layout_gravity="center"
-                android:src="@drawable/ic_star_black_24dp" />
+                android:src="@drawable/ic_star_black_24dp"
+                android:layout_marginLeft="4dp" />
 
         </LinearLayout>
 
