--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,10 @@
 <resources>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="color">#DFFFFFFF</color>
     <color name="colorRate">#F8FF3B</color>
     <color name="colorAccent">#66D1C8</color>
-    <color name="black">#000</color>
+    <color name="colorSearch">#00CDD4</color>
+    <color name="black">#7A000000</color>
 </resources>
