--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,5 @@
     <color name="colorRate">#F8FF3B</color>
     <color name="colorAccent">#66D1C8</color>
     <color name="colorSearch">#00CDD4</color>
-    <color name="black">#7A000000</color>
+    <color name="black">#000000</color>
 </resources>
