--- a/app/src/main/res/drawable-v24/rounded_bg_white.xml
+++ b/app/src/main/res/drawable-v24/rounded_bg_white.xml
@@ -6,5 +6,5 @@
     <corners android:radius="25dp"/>
     <solid android:color="@android:color/white" />
     <stroke android:width="1dp"/>
-    <stroke android:color="#afafaf"/>
+    <stroke android:color="#FFFFFF"/>
 </shape>
