please check the new update

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,6 @@
     <color name="colorRate">#F8FF3B</color>
     <color name="colorAccent">#66D1C8</color>
     <color name="colorSearch">#72009688</color>
-    <color name="colorFilter">#F5F6FA</color>
+    <color name="colorFilter">#E5E8EE</color>
     <color name="black">#000000</color>
 </resources>
